@@ -28,11 +28,15 @@ fi
 # Option -r removes autogenerated files.
 if test x"$1" = x-r; then
   rm -Rf lib m4 build-aux/snippet autom4te.cache
-  for f in config.guess config.sub depcomp install-sh missing
-      do rm -f build-aux/$f; done
+
+  for f in config.guess config.sub depcomp install-sh missing \
+      gitlog-to-changelog .gitignore
+    do rm -f build-aux/$f; done
+
   rm -f configure aclocal.m4 INSTALL
   for dir in . src yambi man tests; do rm -f $dir/Makefile.in; done
   rm -f yambi/crctab.c src/scantab.h
+
   exit
 fi
 
